--- a/Synthboard.vcxproj.filters
+++ b/Synthboard.vcxproj.filters
@@ -467,6 +467,9 @@
     <Image Include="icon2.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Keys.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Synthboard.rc">
