--- a/Synthboard.vcxproj
+++ b/Synthboard.vcxproj
@@ -165,10 +165,13 @@
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Module.cpp" />
     <ClCompile Include="RenderableElement.cpp" />
     <ClCompile Include="SimpleButton.cpp" />
     <ClCompile Include="Slider.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="SoundConstants.cpp" />
+    <ClCompile Include="Sound_old.cpp" />
     <ClCompile Include="TextField.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +182,7 @@
     <ClInclude Include="InteractiveElement.h" />
     <ClInclude Include="IntField.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="Module.h" />
     <ClInclude Include="RenderableElement.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SDL2\include\begin_code.h" />
@@ -268,6 +272,8 @@
     <ClInclude Include="SimpleButton.h" />
     <ClInclude Include="Slider.h" />
     <ClInclude Include="Sound.h" />
+    <ClInclude Include="SoundConstants.h" />
+    <ClInclude Include="Sound_old.h" />
     <ClInclude Include="TextField.h" />
   </ItemGroup>
   <ItemGroup>
