--- a/Synthboard.vcxproj
+++ b/Synthboard.vcxproj
@@ -158,6 +158,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AbstractedAccess.cpp" />
+    <ClCompile Include="Filters.cpp" />
     <ClCompile Include="FloatField.cpp" />
     <ClCompile Include="Helpers.cpp" />
     <ClCompile Include="InteractiveElement.cpp" />
@@ -176,6 +177,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractedAccess.h" />
+    <ClInclude Include="Filters.h" />
     <ClInclude Include="FloatField.h" />
     <ClInclude Include="Helpers.h" />
     <ClInclude Include="Input.h" />
