--- a/Synthboard.vcxproj
+++ b/Synthboard.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="SoundConstants.cpp" />
     <ClCompile Include="Sound_old.cpp" />
     <ClCompile Include="TextField.cpp" />
+    <ClCompile Include="Waveform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractedAccess.h" />
@@ -277,6 +278,7 @@
     <ClInclude Include="SoundConstants.h" />
     <ClInclude Include="Sound_old.h" />
     <ClInclude Include="TextField.h" />
+    <ClInclude Include="Waveform.h" />
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="SDL2\lib\x64\SDL2.dll">
