Batch system overhaul
RenderableElements, InteractiveElements, and Modules all use the exact same update-all-at once approach, however they have been three different implementations until now. Now, it is completely overhauled. All three use BatchRegistries, which register elements and call functions on them. Thread safety included.

--- a/Synthboard.vcxproj
+++ b/Synthboard.vcxproj
@@ -178,6 +178,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractedAccess.h" />
+    <ClInclude Include="Batcher.h" />
     <ClInclude Include="Filters.h" />
     <ClInclude Include="FloatField.h" />
     <ClInclude Include="Helpers.h" />
